Se agrego la vista Discover

--- a/src/components/CardDetail/ExtraDetail/ExtraDetail.module.css
+++ b/src/components/CardDetail/ExtraDetail/ExtraDetail.module.css
@@ -1,6 +1,6 @@
 .buttonsBox {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
 }
 .button {
     background-color: #ead7c8;
