--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,7 +1,7 @@
 .filterBox {
     display: flex;
     align-items: center;    
-    justify-content: start;
+    justify-content: flex-start;
 
 }
 
