--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     background-color: black;
     color: green;
     padding-left: 1em;
