--- a/src/components/UserBar/UserBar.module.css
+++ b/src/components/UserBar/UserBar.module.css
@@ -1,7 +1,7 @@
 .userBar {
     background-color: green;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     padding: 2px 20px;
     align-items: center;
     color: white;
